Pagina web para maleta pedagogica

--- a/html/etiquetas/etiquetas.html
+++ b/html/etiquetas/etiquetas.html
@@ -50,25 +50,24 @@
       <main>
         <img src="" alt="">
         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb ">
-          <ol class="breadcrumb m-3 p-2">
-            <li class="breadcrumb-item"><a href="/index.html"><i class="bi bi-house p-2"></i>Inicio</a></li>
-            <li class="breadcrumb-item active" aria-current="page">HTML</li>
+          <ol class="breadcrumb ms-5 p-3 fs-5" >
+            <strong>
+              <li class="breadcrumb-item"><a href="/index.html" class="link-offset-2 link-underline link-underline-opacity-0"><i class="bi bi-house p-2 "></i>Inicio</a></li>
+            </strong> 
           </ol>
         </nav>
         <aside>
-          <div class="container m-0 p-0">
+          <div class="container ms-5">
             <div class="row ">
                <div class="col-3 p-3 "  > <!--style="overflow-y: auto; max-height: 900px"-->
                 <div id="list-example" class="list-group ps-2"  >
-                  <a class="list-group-item list-group-item-action " href="/html/html.html"> <i class="bi bi-filetype-html pe-2"></i>Introducción</a>
-                  <a class="list-group-item list-group-item-action" href="/html/etiquetas/etiquetas.html" id="list-item-2">Etiquetas</a>
-                  <a class="list-group-item list-group-item-action" href="/html/elementos-vacios-y-llenos/elementos.html">Elementos llenos y vacíos</a>
-                  <a class="list-group-item list-group-item-action" href="/html/estructura/estructura-basica.html" >Estructura básica</a>
-                  <a class="list-group-item list-group-item-action" href="/html/atributos/atributos.html 4">Atributos</a>
-                  <a class="list-group-item list-group-item-action" href="/html/tablas/tablas.html">Tablas</a>
-                  <a class="list-group-item list-group-item-action" href="/html/formularios/formularios.html">Formularios</a>
-                 
-
+                  <a class="list-group-item list-group-item-action" href="../html.html" id="list-item-1"> <i class="bi bi-filetype-html pe-2"></i>Introducción</a>
+                  <a class="list-group-item list-group-item-action" href="../etiquetas/etiquetas.html"" id="list-item-2">Etiquetas</a>
+                  <a class="list-group-item list-group-item-action" href="../elementos-vacios-y-llenos/elementos.html">Elementos llenos y vacíos</a>
+                  <a class="list-group-item list-group-item-action" href="../estructura/estructura-basica.html">Estructura básica</a>
+                  <a class="list-group-item list-group-item-action" href="../atributos/atributos.html ">Atributos</a>
+                  <a class="list-group-item list-group-item-action" href="../tablas/tablas.html">Tablas</a>
+                  <a class="list-group-item list-group-item-action" href="../formularios/formularios.html">Formularios</a>
                 </div>
               </div>
               <div class="col-9 m-0">
