CSS and Pixel Art added

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
             <li class="nav-item dropdown">
               <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                Dropdown
+                Programas
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="/html/html.html">HTML</a></li>
+                <li><a class="dropdown-item" href="/css/css.html">CSS</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="/">Pixel Art</a></li>
               </ul>
             </li>
           </ul>
@@ -113,7 +113,7 @@
                   <p class="card-text fs-3 text-center"> <b> CSS</b></p>
                   <p class="fs-8 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit.delectus aperiam
                     nobis, praesentium quod optio, perspiciatis officia?</p>
-                  <button class="btn-card  " role="button" href="#" type="button">Link</button>
+                  <a href="/css/css.html"> <button class="btn-card  " role="button" href="#" type="button">Link</button></a>
                 </div>
               </div>
             </div>
