finalizando pagina de maleta pedagogica

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand fs-2 ms-5" href="index.html">PIXEL-<span class="after-element ">ACADEMY</span></a>
+        <a class="navbar-brand fs-2" href="index.html">Pixel-<span class="after-element ">Academy</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -60,21 +60,19 @@
       <div class="container m-0 p-0">
         <div class="info-container  d-flex justify-content-center align-items-center  ">
           <div class="row">
-            <div class="md-6 col-md-6">
+            <div class="contenedor_texto md-6 col-md-6">
               <div class="title-content  text-center ps-3 ">
                 <h1>¡Bienvenidos!</h1>
               </div>
               <div class="text-content text-center  ">
-                <p class="paragraph-content text-start">¡Bienvenido a nuestro sitio web de aprendizaje creativo! Aquí encontrarás una colección 
+                <p class="paragraph-content text-start"><b>¡Bienvenido a nuestro sitio web de aprendizaje creativo! Aquí encontrarás una colección 
                   de recursos y tutoriales que te guiarán a través del fascinante mundo de la creación web, el arte de los píxeles y la paleta de colores.
-                   Ya sea que seas un principiante absoluto o un aficionado con experiencia, ¡estamos aquí para ayudarte a mejorar tus habilidades!.</p>
-                <button class="btn-section-1 " role="button" href="#" type="button">Link</button>
-                <button class="btn-section-2 " role="button" href="#" type="button">Link</button>
+                  Ya sea que seas un principiante absoluto o un aficionado con experiencia, ¡estamos aquí para ayudarte a mejorar tus habilidades!.</b></p>
               </div>
             </div>
             <div class="md-6 col-sm- col-md-6 ">
               <div class="img-content">
-                <img src="imagenes/Update.png" class="image-flex image-fluid w-100 h-50 mb-5 m-0 p-0" alt="">
+                <img src="imagenes/Update.png" class="image-flex image-fluid w-100 h-50 m-0 p-0" alt="">
               </div>
             </div>
           </div>
@@ -136,7 +134,7 @@
                 <div class="card-body d-flex flex-column align-items-center">
                   <p class="card-text fs-3 text-center"> <b> Teoria del color</b></p>
                   <p class="fs-8 text-center ">La teoría del color estudia cómo los colores se mezclan, contrastan y afectan nuestras percepciones y emociones en el diseño y el arte.</p>
-                  <a href="html/html.html"><button class="btn-card" role="button" href="..html/html.html"
+                  <a href="color/color.html"><button class="btn-card" role="button" href="color/color.html"
                       type="button">Link</button></a>
                 </div>
               </div>
