--- a/html/html.html
+++ b/html/html.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
           <div class="container-fluid">
-            <a class="navbar-brand fs-2" href="../index.html">Sparkle <span class="after-element ">Horse</span> </a>
+            <a class="navbar-brand fs-2" href="../index.html">Pixel-<span class="after-element ">Academy</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
