Agregando imagen de inicio

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
             <div class="md-6 col-sm- col-md-6 ">
               <div class="img-content">
-                <img src="imagenes/Update.png" class="image-flex image-fluid w-100 h-50 m-0 p-0" alt="">
+                <img src="imagenes/cohete.png" class="image-flex image-fluid w-100 h-50 m-0 p-0" alt="">
               </div>
             </div>
           </div>
